# Modbus_RTU

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_commands.json
.github/workflows/: c-cpp.yml
inc/: ModbusIO.h  ModbusRtu.h  ModbusTypes.h  ModbusUtils.h
src/: ModbusRtu.c  ModbusUtils.c
test/googletest/: CMakeLists.txt
test/modbus/: CMakeLists.txt  ModbusIO_mock.cpp  ModbusIO_mock.h  modbus_requests_test.cpp  modbus_responses_test.cpp  modbus_test.cpp
